@@ -5,6 +5,8 @@ CHANGES
 0.5.5 (unreleased)
 ------------------
 
+- Makers are now called with additional keyword arguments.
+
 - Fixed dependencies: The 'extract' extra of zope.app.locales is required.
 
 0.5.4 (2009-06-08)
